reworking of command parser in favor of structured code #1